add `extra_args` support
